--- a/Apps/CarpoolingTECStudentAPP/app/src/main/res/layout/tab3.xml
+++ b/Apps/CarpoolingTECStudentAPP/app/src/main/res/layout/tab3.xml
@@ -1,24 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
+    android:id="@+id/rl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TabbActivity$PlaceholderFragment">
 
-    <TextView
-        android:id="@+id/section_label"
+    <ProgressBar
+        android:id="@+id/_7_8"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="93dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="144dp"
+        android:progressDrawable="@drawable/progressbar_states"
+        app:layout_constraintBottom_toTopOf="@+id/_1"
+        app:layout_constraintTop_toBottomOf="@+id/_0"
+        app:layout_constraintVertical_bias="0.625"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <ProgressBar
+        android:id="@+id/_8_9"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="99dp"
+        android:layout_height="72dp"
+        android:layout_below="@+id/_6"
+        android:layout_alignStart="@+id/_10_11"
+        android:layout_marginTop="42dp"
+        android:progressDrawable="@drawable/progressbar_states"
+        app:layout_constraintBottom_toTopOf="@+id/_1"
+        app:layout_constraintTop_toBottomOf="@+id/_0"
+        app:layout_constraintVertical_bias="0.625"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <ProgressBar
+        android:id="@+id/_9_10"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="112dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/_6"
+        android:layout_alignEnd="@+id/_27"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="-7dp"
+        android:progressDrawable="@drawable/progressbar_states"
+        app:layout_constraintBottom_toTopOf="@+id/_1"
+        app:layout_constraintTop_toBottomOf="@+id/_0"
+        app:layout_constraintVertical_bias="0.625"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <ProgressBar
+        android:id="@+id/_10_11"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="94dp"
+        android:layout_height="54dp"
+        android:layout_below="@+id/_6"
+        android:layout_alignEnd="@+id/_27"
+        android:layout_marginTop="222dp"
+        android:layout_marginEnd="2dp"
+        android:progressDrawable="@drawable/progressbar_states"
+        app:layout_constraintBottom_toTopOf="@+id/_1"
+        app:layout_constraintTop_toBottomOf="@+id/_0"
+        app:layout_constraintVertical_bias="0.625"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <ProgressBar
+        android:id="@+id/_10_"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="94dp"
+        android:layout_height="54dp"
+        android:layout_below="@+id/_6"
+        android:layout_alignEnd="@+id/_27"
+        android:layout_marginTop="296dp"
+        android:layout_marginEnd="1dp"
+        android:progressDrawable="@drawable/progressbar_states"
+        app:layout_constraintBottom_toTopOf="@+id/_1"
+        app:layout_constraintTop_toBottomOf="@+id/_0"
+        app:layout_constraintVertical_bias="0.625"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
-        android:text="tab3 mapeast"/>
+        android:layout_alignStart="@+id/_10_11"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-1dp"
+        android:layout_marginBottom="497dp"
+        android:background="@drawable/com_facebook_tooltip_black_background"
+        android:text="Palí"
+        android:textColor="@color/com_facebook_button_background_color_focused"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/_9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/_10_11"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="410dp"
+        android:background="@drawable/com_facebook_tooltip_black_background"
+        android:text="plaza"
+        android:textColor="@color/com_facebook_button_background_color_focused"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/_27"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/_7_8"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="320dp"
+        android:background="@drawable/com_facebook_tooltip_black_background"
+        android:text="twins"
+        android:textColor="@color/com_facebook_button_background_color_focused"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/_11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/_6"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginBottom="242dp"
+        android:background="@drawable/com_facebook_tooltip_black_background"
+        android:text="residencias"
+        android:textColor="@color/com_facebook_button_background_color_focused"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/_29"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/_6"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-2dp"
+        android:layout_marginBottom="125dp"
+        android:background="@mipmap/ic_launcher_foreground"
+        android:textColor="@color/com_facebook_button_background_color_focused"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/_6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/_8"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/com_facebook_tooltip_black_background"
+        android:text="san rafael"
+        android:textColor="@color/com_facebook_button_background_color_focused"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+</RelativeLayout>
